@@ -5,7 +5,10 @@ http://s.apache.org/luceneversions
 
 ======================= Lucene 3.6.2 =======================
 
-(No Changes)
+Bug Fixes
+
+* LUCENE-4109: BooleanQueries are not parsed correctly with the
+  flexible query parser. (Karsten Rauch via Robert Muir)
 
 ======================= Lucene 3.6.1 ================
 
